<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能博物馆</string>
    <string name="description_title">铜车马陪葬坑</string>
    <string name="hello_world">  1980年12月，考古工作者在秦始皇帝陵封土西侧20米、距现地表7．8米深的地下发掘出了两乘大型彩绘铜车马。两乘铜车马一前一后放置在一个木椁内，因木椁腐朽，上部的填土塌陷，铜车马出土时均已被压碎，但由于未被盗扰，原位没有大的变动，车马的构件基本齐全。这是我国考古史上发现最早、体形最大、保存最完整的青铜车马，对研究我国秦代冶炼与青铜制造技术、车辆结构等具有极重要的价值</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_description">展品介绍</string>
    <string name="title_activity_map">地图导览</string>
    <string name="wifi_dialog_title">设置wifi连接</string>
    <string name="wifi_dialog_message">请连接wifi:connectify-fz!</string>
    <string name="wifi_dialog_btn_ok">设置</string>
    <string name="wifi_dialog_btn_cancel">取消</string>
    <string name="setting_title_IR_MODE">红外模式选择</string>
    <string name="setting_IR_MODE_CONTINUE">连续发送模式</string>
    <string name="setting_IR_MODE_BUTTON">按键发送模式</string>
    <string name="setting_titile_IR_SPEECH">在收听音频介绍时是否开启红外</string>
    <string name="setting_YES">是</string>
    <string name="setting_NO">否</string>
    <string name="setting_title_wifi_ssid">Wifi SSID设置</string>
    <string name="title_activity_ssidselect">SSIDSelectActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ssidlist">设置SSID</string>

</resources>